--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -1729,9 +1729,10 @@ Discrete patterns in the raw dispersions are indicative of low counts and sugges
 A strong trend may also be observed where the dispersion drops sharply with increasing average abundance.
 This is due to the disproportionate impact of artifacts such as mapping errors and PCR duplicates at low counts. 
 It is difficult to accurately fit an empirical curve to these strong trends.  
-Inaccurate fitting means that the dispersions at high abundances are often overestimated. 
-Users should check whether removal of the low abundance regions affects the dispersion estimate. 
-Large changes upon removal imply that more aggressive abundance-based filtering may be desirable, as described in Chapter~\ref{chap:filter}.
+As a consequence, the dispersions at high abundances may be overestimated. 
+Filtering of low-abundance regions (as described in Chapter~\ref{chap:filter}) provides some protection by removing the strongest part of the trend.
+Users can compare raw and filtered results to see whether this makes any difference.
+Such filtering has an additional benefit of removing those tests that have low power due to the magnitude of the dispersions.
 
 <<label=rmchecker,eval=FALSE>>=
 yo <- asDGEList(original, norm.factors=normfacs)
