Fixed reference to df.prior from glmQLFit.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2116 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -1760,7 +1760,7 @@ However, strong shrinkage is not appropriate if the dispersions are highly varia
 Fewer prior degrees of freedom (and less shrinkage) are required to maintain type I error control. 
 
 <<>>=
-summary(fit$df.prior)
+summary(fit$s2.fit$df.prior)
 @
 
 On occasion, the estimated prior degrees of freedom will be infinite. 
