--- a/userguide/ref_ug.bib
+++ b/userguide/ref_ug.bib
@@ -358,5 +358,16 @@
 	year = {1997},
 }
 
+@Article{dunham2012,
+	Author="ENCODE Project Consortium",
+	Title="{{A}n integrated encyclopedia of {D}{N}{A} elements in the human genome}",
+	Journal="Nature",
+	Year="2012",
+	Volume="489",
+	Number="7414",
+	Pages="57--74",
+	Month="Sep"
+}
+
 
 
